feat: add group-chat rework message read logic
